--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lorem-ipsum": "^2.0.8",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
