--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@vercel/kv": "^0.2.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "lorem-ipsum": "^2.0.8",
@@ -21,6 +22,7 @@
     "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.7",
     "typescript": "5.1.6"
   }
 }
