--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.7.0",
+    "@types/md5": "^2.3.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
-    "lorem-ipsum": "^2.0.8",
     "md5": "^2.3.0",
     "next": "13.4.12",
+    "openai": "^3.3.0",
     "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
