--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "redis": "^4.6.7",
     "typescript": "5.1.6"
   }
