--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.4.12",
     "md5": "^2.3.0",
     "next": "13.4.12",
+    "node-cache": "^5.1.2",
     "openai": "^3.3.0",
     "pg": "^8.11.1",
     "prettier": "^3.0.0",
